<resources>
    <string name="app_name">Shoocal Task (Both)</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string-array name="request_type">
        <item>Owner</item>
        <item>Manager</item>
        <item>Other</item>
    </string-array>
</resources>
