<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskOne">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_first_name"
        android:gravity="center_horizontal"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_last_name"
        android:gravity="center_horizontal"
        android:hint="@string/phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:gravity="top|center"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="5"
        android:minLines="3"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/et_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_address"
        android:gravity="center_horizontal"
        android:hint="@string/restaurant_name" />

    <Spinner
        android:id="@+id/sp_request_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_restaurant_name"
        android:entries="@array/request_type" />

    <Button
        android:id="@+id/bt_send_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp_request_type"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:onClick="sendPostReq"
        android:text="Send Request" />
</RelativeLayout>